[gd_scene load_steps=11 format=3 uid="uid://bjtudxbydfwp7"]

[ext_resource type="Script" path="res://entity/Root/Root_Scene.gd" id="1_bi4d0"]
[ext_resource type="PackedScene" uid="uid://bci3pxxdc0dhy" path="res://entity/TopPanel/Top_Panel.tscn" id="2_78csr"]
[ext_resource type="PackedScene" uid="uid://dq0l7b8i0qose" path="res://entity/Foundation/Foundation.tscn" id="2_ow12a"]
[ext_resource type="PackedScene" uid="uid://bji5davic22r2" path="res://entity/CardHolder/Card_holder.tscn" id="3_sndy5"]
[ext_resource type="PackedScene" uid="uid://blqnju06jpcyk" path="res://entity/TableauPile/Tableau_Pile.tscn" id="4_kxirh"]
[ext_resource type="PackedScene" uid="uid://cnh2aajt02v3t" path="res://entity/Settings/Bottom_Panel.tscn" id="5_d3tti"]

[sub_resource type="Theme" id="Theme_bnft7"]
MarginContainer/constants/margin_bottom = 28
MarginContainer/constants/margin_left = 28
MarginContainer/constants/margin_right = 28
MarginContainer/constants/margin_top = 28

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v4s0x"]
texture_margin_left = 40.0
texture_margin_top = 20.0
texture_margin_right = 40.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4enio"]
texture_margin_left = 20.0
texture_margin_right = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d4lxm"]
bg_color = Color(0.219501, 0.219501, 0.219501, 1)
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_bnft7")
script = ExtResource("1_bi4d0")

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="PanelContainer" parent="Main"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v4s0x")

[node name="TopPanel" parent="Main/TopPanel" instance=ExtResource("2_78csr")]
layout_mode = 2

[node name="MainScreen" type="PanelContainer" parent="Main"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_4enio")

[node name="Vbox" type="VBoxContainer" parent="Main/MainScreen"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TopHcontainer" type="HBoxContainer" parent="Main/MainScreen/Vbox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CardHolder" parent="Main/MainScreen/Vbox/TopHcontainer" instance=ExtResource("3_sndy5")]
layout_direction = 2
layout_mode = 2

[node name="space" type="Control" parent="Main/MainScreen/Vbox/TopHcontainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Foundation0" parent="Main/MainScreen/Vbox/TopHcontainer" instance=ExtResource("2_ow12a")]
layout_mode = 2

[node name="Foundation1" parent="Main/MainScreen/Vbox/TopHcontainer" instance=ExtResource("2_ow12a")]
layout_mode = 2

[node name="Foundation2" parent="Main/MainScreen/Vbox/TopHcontainer" instance=ExtResource("2_ow12a")]
layout_mode = 2

[node name="Foundation3" parent="Main/MainScreen/Vbox/TopHcontainer" instance=ExtResource("2_ow12a")]
layout_mode = 2

[node name="TableauHbox" type="HBoxContainer" parent="Main/MainScreen/Vbox"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TableauPile1" parent="Main/MainScreen/Vbox/TableauHbox" instance=ExtResource("4_kxirh")]
layout_mode = 2

[node name="TableauPile2" parent="Main/MainScreen/Vbox/TableauHbox" instance=ExtResource("4_kxirh")]
layout_mode = 2

[node name="TableauPile3" parent="Main/MainScreen/Vbox/TableauHbox" instance=ExtResource("4_kxirh")]
layout_mode = 2

[node name="TableauPile4" parent="Main/MainScreen/Vbox/TableauHbox" instance=ExtResource("4_kxirh")]
layout_mode = 2

[node name="TableauPile5" parent="Main/MainScreen/Vbox/TableauHbox" instance=ExtResource("4_kxirh")]
layout_mode = 2

[node name="TableauPile6" parent="Main/MainScreen/Vbox/TableauHbox" instance=ExtResource("4_kxirh")]
layout_mode = 2

[node name="TableauPile7" parent="Main/MainScreen/Vbox/TableauHbox" instance=ExtResource("4_kxirh")]
layout_mode = 2

[node name="BottomPanel" type="PanelContainer" parent="Main"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_4enio")

[node name="Settings" parent="Main/BottomPanel" node_paths=PackedStringArray("ui_parent") instance=ExtResource("5_d3tti")]
layout_mode = 2
size_flags_horizontal = 4
ui_parent = NodePath("../../../GlobalPopup")

[node name="Timer" type="Timer" parent="."]

[node name="UiPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 847.0
offset_bottom = 914.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d4lxm")

[node name="VBoxContainer" type="VBoxContainer" parent="UiPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="UiPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "YOU WON!"

[node name="Button" type="Button" parent="UiPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "RESTART"

[node name="GlobalPopup" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
